sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:71: error: ':' expected but ')' found.
def comparaison(i){
                 ^DutchFlagAlgo:85: error: identifier expected but '}' found.
}
^